fixed spacing

--- a/DealorNoDeal.css
+++ b/DealorNoDeal.css
@@ -28,7 +28,7 @@ h3{
   color: darkblue;
 }
 
-h4{
+h6{
   font-family: 'Rubik Mono One', sans-serif;
   font-size: 60pt;
   color: green ;
